// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Radio Disabled not selected Radio 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "color": "#82e616",
      }
    }
  >
    <span
      className="css-u42v7v-Radio"
      data-testid="radio-input"
    >
      <input
        checked={false}
        className="css-dswabq-Radio"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="on"
      />
      <span
        className="css-1cnuipo-Radio"
      >
        <span
          className="css-ju6fpu-Radio"
        />
        <span
          className="css-7s815w-Radio"
        />
      </span>
    </span>
    <span
      className="css-u42v7v-Radio"
      data-testid="radio-input"
    >
      <input
        checked={false}
        className="css-dswabq-Radio"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="on"
      />
      <span
        className="css-1cnuipo-Radio"
      >
        <span
          className="css-nbhqh9-Radio"
        />
        <span
          className="css-7s815w-Radio"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Disabled selected Radio 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "color": "#82e616",
      }
    }
  >
    <span
      className="css-u42v7v-Radio"
      data-testid="radio-input"
    >
      <input
        checked={true}
        className="css-dswabq-Radio"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="on"
      />
      <span
        className="css-1cnuipo-Radio"
      >
        <span
          className="css-zdwkz9-Radio"
        />
        <span
          className="css-7s815w-Radio"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Not selected Radio  (\`checked === undefined\`) 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "color": "#82e616",
      }
    }
  >
    <span
      className="css-u42v7v-Radio"
      data-testid="radio-input"
    >
      <input
        checked={false}
        className="css-dswabq-Radio"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="on"
      />
      <span
        className="css-1cnuipo-Radio"
      >
        <span
          className="css-smkmv8-Radio"
        />
        <span
          className="css-7s815w-Radio"
        />
      </span>
    </span>
    <span
      className="css-u42v7v-Radio"
      data-testid="radio-input"
    >
      <input
        checked={false}
        className="css-dswabq-Radio"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="on"
      />
      <span
        className="css-1cnuipo-Radio"
      >
        <span
          className="css-1ps86un-Radio"
        />
        <span
          className="css-7s815w-Radio"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Not selected Radio (\`checked === false\`) 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "color": "#82e616",
      }
    }
  >
    <span
      className="css-u42v7v-Radio"
      data-testid="radio-input"
    >
      <input
        checked={false}
        className="css-dswabq-Radio"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="on"
      />
      <span
        className="css-1cnuipo-Radio"
      >
        <span
          className="css-smkmv8-Radio"
        />
        <span
          className="css-7s815w-Radio"
        />
      </span>
    </span>
    <span
      className="css-u42v7v-Radio"
      data-testid="radio-input"
    >
      <input
        checked={false}
        className="css-dswabq-Radio"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="on"
      />
      <span
        className="css-1cnuipo-Radio"
      >
        <span
          className="css-1ps86un-Radio"
        />
        <span
          className="css-7s815w-Radio"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Radio showcase 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "color": "#82e616",
      }
    }
  >
    <div>
      <span
        className="css-u42v7v-Radio"
        data-testid="radio-input"
      >
        <input
          checked={false}
          className="css-dswabq-Radio"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="a"
        />
        <span
          className="css-1cnuipo-Radio"
        >
          <span
            className="css-smkmv8-Radio"
          />
          <span
            className="css-7s815w-Radio"
          />
        </span>
      </span>
      <span
        className="css-u42v7v-Radio"
        data-testid="radio-input"
      >
        <input
          checked={false}
          className="css-dswabq-Radio"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="b"
        />
        <span
          className="css-1cnuipo-Radio"
        >
          <span
            className="css-1ps86un-Radio"
          />
          <span
            className="css-7s815w-Radio"
          />
        </span>
      </span>
      <span
        className="css-u42v7v-Radio"
        data-testid="radio-input"
      >
        <input
          checked={true}
          className="css-dswabq-Radio"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="c"
        />
        <span
          className="css-1cnuipo-Radio"
        >
          <span
            className="css-1bf21so-Radio"
          />
          <span
            className="css-7s815w-Radio"
          />
        </span>
      </span>
      <span
        className="css-u42v7v-Radio"
        data-testid="radio-input"
      >
        <input
          checked={false}
          className="css-dswabq-Radio"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="d"
        />
        <span
          className="css-1cnuipo-Radio"
        >
          <span
            className="css-ju6fpu-Radio"
          />
          <span
            className="css-7s815w-Radio"
          />
        </span>
      </span>
      <span
        className="css-u42v7v-Radio"
        data-testid="radio-input"
      >
        <input
          checked={false}
          className="css-dswabq-Radio"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="e"
        />
        <span
          className="css-1cnuipo-Radio"
        >
          <span
            className="css-nbhqh9-Radio"
          />
          <span
            className="css-7s815w-Radio"
          />
        </span>
      </span>
      <span
        className="css-u42v7v-Radio"
        data-testid="radio-input"
      >
        <input
          checked={true}
          className="css-dswabq-Radio"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="g"
        />
        <span
          className="css-1cnuipo-Radio"
        >
          <span
            className="css-zdwkz9-Radio"
          />
          <span
            className="css-7s815w-Radio"
          />
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Selected Radio 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "color": "#82e616",
      }
    }
  >
    <span
      className="css-u42v7v-Radio"
      data-testid="radio-input"
    >
      <input
        checked={true}
        className="css-dswabq-Radio"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="on"
      />
      <span
        className="css-1cnuipo-Radio"
      >
        <span
          className="css-1bf21so-Radio"
        />
        <span
          className="css-7s815w-Radio"
        />
      </span>
    </span>
  </div>
</div>
`;
